--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="activity_start_lets_do_this">You\'ll be presented with 8 to 10 questions about your personality.</string>
+    <string name="activity_start_select_one">Select the card that better matches your opinion :)</string>
+    <string name="activity_start_start_button">Let\'s do this!</string>
+    <string name="loading_quiz">Loading your quiz…</string>
 </resources>
